--- a/css/style.css
+++ b/css/style.css
@@ -699,6 +699,16 @@ footer {
 .search-bar {
   flex: 1;
 }
+.listing-meta {
+  max-width: 1100px;
+  margin: 1rem auto 0;
+  text-align: right;
+  color: #aaa;
+  font-style: italic;
+  font-size: 0.95rem;
+  padding: 0 1rem;
+}
+
 
 #search-input {
   width: 100%;
