--- a/css/style.css
+++ b/css/style.css
@@ -719,16 +719,18 @@ footer {
 #listing-container .card-image {
   position: relative;
   width: 100%;
-  aspect-ratio: 16 / 9;
   overflow: hidden;
 }
 
-#listing-container .card-image img {
-  position: absolute;
-  inset: 0;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
+#listing-container .card-image::before {
+  content: '';
+  display: block;
+  padding-top: 56.25%; /* équivaut à 16:9 */
+}
+
+#listing-container .card-image {
+  background-size: cover;
+  background-position: center;
 }
 
 .search-bar {
