--- a/css/style.css
+++ b/css/style.css
@@ -479,14 +479,16 @@ main {
   margin-bottom: 1rem;
 }
 
-.article-full .cover-image {
+#cover-image {
+  position: relative;
   width: 100%;
-  height: 240px;
+  padding-top: 56.25%; /* = 9/16 = ratio 16:9 */
   background-size: cover;
   background-position: center;
-  border-radius: 4px;
-  margin-bottom: 1.5rem;
+  border-radius: 8px;
+  box-shadow: 0 0 10px #00000066;
 }
+
 
 .article-full p {
   font-size: 1.1rem;
