--- a/css/article.css
+++ b/css/article.css
@@ -202,7 +202,10 @@
   font-weight: 500;
   line-height: 1.3;
   flex: 1;
-  white-space: nowrap;
+  display: -webkit-box;
+	-webkit-line-clamp: 2;
+	-webkit-box-orient: vertical;
+  overflow: hidden;
   overflow: hidden;
   text-overflow: ellipsis;
   max-width: 150px;
