--- a/components/footer.html
+++ b/components/footer.html
@@ -1,4 +1,10 @@
-  <footer>
-    <a href="components/feed.xml" target="_blank" class="rss-link" title="S’abonner au flux RSS">📡 Flux RSS</a>
-    SephyLeaks – Projet communautaire non officiel. Soutenez-nous sur Ko-fi ✧
-  </footer>
+<footer>
+  <a href="/SephyLeaks/components/feed.xml" target="_blank" class="rss-link" title="S’abonner au flux RSS">📡 Flux RSS</a>
+  SephyLeaks – Projet communautaire non officiel. Soutenez-nous sur Ko-fi ✧
+</footer>
+
+<script type="text/javascript" src="https://storage.ko-fi.com/cdn/widget/Widget_2.js"></script>
+<script type="text/javascript">
+  kofiwidget2.init('Soutenez SephyLeaks 💜', '#c573f5', 'Y8Y41E6NZ8');
+  kofiwidget2.draw();
+</script>
