--- a/css/editor.css
+++ b/css/editor.css
@@ -7,6 +7,7 @@
 body {
   margin: 0; /* assure qu’il n’y a pas de marge par défaut */
   padding: 0;
+  padding-top: 70px;
   height: 100vh;
   display: flex;
   flex-direction: column; /* change flex-direction pour empiler nav + contenu */
@@ -531,6 +532,7 @@ body {
 .editor-nav {
   position: fixed;
   top: 0;
+  height: 70px;
   left: 0;
   width: 100%;
   background-color: #2d2443;
