--- a/css/editor.css
+++ b/css/editor.css
@@ -567,17 +567,13 @@ body {
 
 /* === SLIDER CONTAINERS === */
 .slider-container {
-  margin-top: 1rem; /* Ajout : espace visuel confortable */
+  display: block;
+  max-height: fit-content;
+  overflow-x: auto;
+  overflow-y: hidden;
   padding: 1rem 2rem;
   background-color: #1f1b2f;
-  border-bottom: 1px solid #444;
-  overflow-x: auto;
-  scroll-behavior: smooth;
-  white-space: nowrap;
-  max-width: 100%;
   box-shadow: inset 0 -1px 0 #444;
-  transition: max-height 0.3s ease, opacity 0.3s ease;
-
 }
 
 
