--- a/css/editor.css
+++ b/css/editor.css
@@ -177,11 +177,14 @@ body {
 
 /* === PREVIEW DROITE === */
 .editor-preview {
-  flex: 0,8;
+  width: 320px;
   background-color: #2d2443;
-  padding: 1.5rem;
+  padding: 1rem;
   overflow-y: auto;
-  border-left: 1px solid #444;
+  display: flex;
+  flex-direction: column;
+  gap: 1.2rem;
+  border-right: 1px solid #444;
 }
 .editor-preview h2 {
   font-family: 'Cinzel', serif;
