--- a/css/account/account.css
+++ b/css/account/account.css
@@ -70,6 +70,13 @@ body {
 .edit-profile-btn:hover {
   background: #a55fd0;
 }
+.input-hint {
+  display: block;
+  margin-top: 0.2rem;
+  font-size: 0.85rem;
+  color: #aaa;
+  font-style: italic;
+}
 
 
 .account-tabs {
@@ -178,16 +185,6 @@ body {
   margin-bottom: 1rem;
 }
 
-.avatar-placeholder {
-  width: 80px;
-  height: 80px;
-  border-radius: 50%;
-  background-color: #444;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 2rem;
-}
 
 .user-main h2 {
   margin: 0;
